can read nextjs

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,10 @@
   }
 }
 
-body {
+body,
+html {
+  border: 0px;
+  margin: 0px;
   /* color: rgb(var(--foreground-rgb)); */
   /* background: linear-gradient(to bottom,
       transparent,
